= Release notes v.2.6

== Bugfix: `transactionFeeIndicator` tag is provided in payment initiation request even if it is not supported by Bank
The tag will not be returned in payment initiation response if it is not supported by Bank.

== Bugfix: Incorrect property name in the response to the AIS consent creation request

From now on,  the endpoint for consent creation (POST `/v1/consents`) returns correct response with field `psuMessage` instead of `message`.