@@ -37,4 +37,14 @@ public abstract class SpiPaymentInitiationResponse {
     private String psuMessage;
     private List<String> tppMessages;
     private String aspspAccountId;
+
+    /**
+     * @return spiTransactionFeeIndicator
+     *
+     * @deprecated since 2.6 and will be removed in 2.9, use getTransactionFeeIndicator instead
+     */
+    @Deprecated //TODO remove deprecated method in 2.9 https://git.adorsys.de/adorsys/xs2a/aspsp-xs2a/issues/844
+    public boolean isTransactionFeeIndicator() {
+        return spiTransactionFeeIndicator != null ? spiTransactionFeeIndicator : false;
+    }
 }
